style(background): adjust background layering and position - shift the Background component behind children components at Layout level - transfer Tailwind background styles to CSS and apply by specifying background properties - adjust body height to ensure the background covers the entire viewport

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,12 @@ canvas {
   max-width: 560px;
 }
 
+.background-sky {
+  background: linear-gradient(to bottom, #1e1a4d, #59168b, #000000);
+  background-attachment: fixed;
+  height: 100%;
+}
+
 @media (width >= 48rem) {
   .font-body {
     line-height: 1.625;
